--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta
-  name="viewport"
-  content="minimum-scale=1, initial-scale=1, width=device-width"
-/>
-  <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@500&display=swap" rel="stylesheet">
-  <script src="./bundle.js" defer ></script>
-  <title>Mysanthropy.space</title>
-</head>
-<body>
-  <div id='app'></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
+    <!-- <style>
+      @import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@500&display=swap');
+      </style> -->
+    <script src="./bundle.js" defer></script>
+    <title>Mysanthropy.space</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
